@@ -25,8 +25,6 @@ renombrarla
 --- Cosas para la siguiente version
 
 
--funcion rename y quiza tambien delete en esxdos handler
-
 -poder hacer 50 FPS en carga top speed: problema, que al hacer top speed, ya no llevamos la cuenta de cuanto son 50 fps, pues no hay sleep de 
 final de frame. Y al no haberlo , si metemos un refresco de pantalla al final de cada supuesto frame, se estara lanzando muchos mas de 50 veces por segundo
 el refresco de pantalla y por tanto, se ralentiza todo y acaba yendo mas o menos a velocidad normal en vez de top speed
@@ -835,11 +833,6 @@ http://www.spinpoint.org/2016/05/06/m4-board-retrofun-8-bit-amstrad-cpc-wifi/#co
 
 --- ESXDOS handler ---
 
--esxdos handler
-fopen,fread,fwrite,fclose,fopendir,freaddir
-*soporta cargar comandos, tapein, grabar snaps desde nmi
-
--esxdos: fseek no parece funcionar en el NextDAW de Gary Biasillo. Al exportar musica a NDR no lo hace bien. Por que?
 
 -Esxdos. Decidir hl o ix según si está paginada la memoria divmmc?
 
